Spine PHP Change Log <http://www.spinephp.org/>
---------------------------------------------------------------------------------------

LATEST AVAILABLE VERSION: 1.0.0 Beta

<12th August 2010>
-----------------------------------------------
[fixed]:	MySQL Class now acts more like MySQLi. Created new classes for MySQL to allow
			creation of query objects and prepared statement objects.
[fixed]:	MySQLi is now not loaded by PDO, fixing the invalid driver issue.
[new]:		Added Model::get_param to allow cleaner loading of a parameter inside models.
[deleted]:	Removed the MySQLi driver as the MySQL driver now mimics MySQLi as closely
			as it can.
[changed]:	Database config items now in their own database.php config file.
[new]:		Added PDO and PDO Drivers Available to Installation Tests.
[changed]:	Inflector is only loaded where required.
[fixed]:	Smarty would encounter supressed errors but error reporting would still display
			them.
[new]:		Errors::ignore and Errors::unignore, to turn error reporting on and off.
[fixed]:	Hooks Controller.beforeConstruct, Controller.afterConstruct and Controller.after
			were not working correctly.
[fixed]:	Smarty extender now hooks correctly into the core.
[fixed]:	Default configuration settings now more appropriate.
[fixed]:	View library bug, some properties were still static and methods were calling static
			properties.
[fixed]:	Controller library now has $helpers not $__helpers, was causing a bug with the actual
			controller.
[fixed]:	Request used General.enable_query_string instead of General.enable_friendly_urls

<11th August 2010>
-----------------------------------------------
[changed]:	Update the MySQL class, changed name to DBDriver to allow multiple drivers.
[new]:		Added PDO support, to allow a better database layer for portability of applications.
			If PDO is unavailable it will revert to the generic classes that were created.

<7th August 2010>
-----------------------------------------------